2008-08-04  Sam Steingold  <sds@gnu.org>

	* clos-class6.lisp (class-prototype@built-in-class): finish last
	patch: (SYS::%UNBOUND) should be the first argument to EQ

2008-08-04  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (thread_length): define to 3 because Thread contains
	3 gcv_object_t fields

2008-08-01  Sam Steingold  <sds@gnu.org>

	* modules/dbus/dbus.lisp: support dbus 1.2.1
	(*foreign-guard*): set to T
	* modules/dbus/configure.in: check all functions

2008-07-31  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (documentation@package): fail gracefully when id-href
	is missing the package and impnotes must be regenerated

2008-07-31  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (def-c-enum): accept non-numeric-literal values

2008-07-31  Sam Steingold  <sds@gnu.org>

	* modules/gtk2/configure.in: fail if FFI is not present

2008-07-31  Sam Steingold  <sds@gnu.org>

	* modules/dbus: new module
	* Makefile.devel (MODULES): add dbus

2008-07-29  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file): fix a bug in "wild" code which caused
	SEARCH-FILE to return NIL even when it found something

2008-07-28 Reini Urban  <rurban@x-ray.at>

	<37_runprog>
	* runprog.lisp: Translate comments to English.

2008-07-28  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (builtin_stream_p): do not export
	* modules/syscalls/calls.c (PATHCONF, FILE-STAT, STAT-VFS):
	use open_file_stream_handle instead of
	builtin_stream_p + SYS::BUILT-IN-STREAM-OPEN-P

2008-07-28  Sam Steingold  <sds@gnu.org>

	new SETFable function POSIX:FILE-SIZE
	* modules/syscalls/configure.in: check for truncate & ftruncate
	* modules/syscalls/calls.c (FILE-SIZE, %SET-FILE-SIZE): implement
	* modules/syscalls/posix.lisp (FILE-SIZE): defsetf & export
	* stream.d (check_open_file_stream): replace strict_p with
	permissive_p to allow retuning nullobj instead of signaling an error
	(open_file_stream_handle): accept permissive_p
	* lispbibl.d (open_file_stream_handle): update the prototype
